--- a/customReact/index.html
+++ b/customReact/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="customreact.js"></script>
+    <script src="./customreact.js"></script>
 </body>
 </html>
